--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -126,7 +126,7 @@ SPDX-License-Identifier: AGPL-3.0-only
     </div>
     <footer class="footer mt-auto py-3 bg-dark">
     <div class="container">
-      <span class="text-light">Privacy policy | Terms of service | Contact</span>
+	    <span class="text-light"><a class="btn btn-dark" href="{{url_for('pages.return_privacy')}}">Privacy Policy</a> | <a class="btn btn-dark" href="{{url_for('pages.return_privacy')}}">Terms of service </a>| <a class="btn btn-dark" href="{{url_for('pages.return_privacy')}}">Contact</a></span>
     </div>
   </footer>
 <!-- script references -->
