--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -24,6 +24,7 @@
               <span class="input-group-text">Password</span>
               <input class="form-control input-s" type="password" name="password" placeholder="Your Password">
             </div>
+	    <a href={{url_for('auth.password_forgotten')}}>Password forgotten?</a>
       </div>
       <div class="card-footer clearfix">
         <span class="input-group-btn">
