--- a/app/templates/auth/password_forgotten.html
+++ b/app/templates/auth/password_forgotten.html
@@ -6,7 +6,7 @@
     <div class="card-group">
   
     <div class="card">
-      <div class="card-header text-center"><b>Signup</b></div>
+      <div class="card-header text-center"><b>Forgotten your password? No problem!</b></div>
       <div class="card-body">
 	{% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -15,28 +15,15 @@
             </div>
         {% endif %}
         {% endwith %}
-      <form method="POST" action="/auth/signup" enctype="multipart/form-data">
+      <form method="POST" action="/auth/password-reset" enctype="multipart/form-data">
             <div class="input-group p-2">
               <span class="input-group-text">Email   </span>
               <input class="form-control input-s" type="email" name="email" placeholder="Your email" autofocus="">
             </div>
-            <div class="input-group p-2">
-              <span class="input-group-text">Username   </span>
-              <input class="form-control input-s" type="text" name="username" placeholder="Username" autofocus="">
-            </div>
-            <div class="input-group p-2">
-              <span class="input-group-text">Password</span>
-              <input class="form-control input-s" type="password" name="password" placeholder="Choose a password">
-            </div>
-	    <br>
-	    <div class="form-check">
-	    <input class="form-check-input" type="checkbox" value="" id="legal" name="legal" required>
-	    <label class="form-check-label" for="legal">I agree to the <a href="{{url_for('pages.return_privacy')}}">privacy policy</a> and <a href="{{url_for('pages.return_privacy')}}">terms of service</a> of this site.</label>
 </div>
-      </div>
       <div class="card-footer clearfix">
         <span class="input-group-btn">
-        <input id="submit_button" type="submit" class="btn btn-success" value="Sign up">
+        <input id="submit_button" type="submit" class="btn btn-success" value="Send link">
       </div>
       </form>
     </div>
