--- a/app/templates/search/results.html
+++ b/app/templates/search/results.html
@@ -31,19 +31,19 @@ SPDX-License-Identifier: AGPL-3.0-only
         <div class="card mt-2">
           <div class="card-body">
 	  <!--<h4 class="card-title"><a href="{{result[1]}}">{{result[2]}}</a></h4>-->
-
-	    {% if result[3] == 'doc' %}
-              <a class="btn btn-secondary" href="{{result[1]}}">{{result[2]}}</a>
-	    {% elif result[3] == 'csv' %}
-              <a class="btn btn-warning" href="{{result[1]}}">{{result[2]}}</a>
-	    {% else %}
 	    <a class="btn btn-light" href="{{result[1]}}"><b>{{result[2]}}</b></a>
-	    {% endif %}
-		{% if edit and current_user.is_authenticated and current_user.is_confirmed %}
+	    {% if edit and current_user.is_authenticated and current_user.is_confirmed %}
 	    <a href='../../admin/urls/edit/?id={{result[0]}}'><img src="{{ url_for('static', filename='annot.png')}}" width='30px' /></a>
 	    {% endif %}
 
 	    <p class="card-text"><br>{{result[3]|safe}} ...</p>
+	    <a class="results-emoji" href="pages/faq.html">🕶️</a> | 
+            {% if result[9] != None %}
+	    <a class="results-emoji" href="#">🔥</a> {{result[9]}} | 
+	    {% endif %}
+            {% if result[10] != None %}
+	    {{result[10]}} | 
+	    {% endif %}
 	    <a href="{{result[1]}}" class="card-link">{{result[1]}}</a>
 	    {% if expert %}
 	      {% if result[4] == 'doc' %}
