--- a/app/templates/orchard/get-a-pod.html
+++ b/app/templates/orchard/get-a-pod.html
@@ -8,17 +8,22 @@ SPDX-License-Identifier: AGPL-3.0-only
 {% block body %}
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
-        <br><br>
-        <div  style="border: 1px solid #ccc; border-radius:10px; padding:15px; height:240px">
-        <p><b>You've just picked a PeARS Pod on the topic: <span style="color:rgb(5, 168, 81)">{{query}}</span>!</b></p>
-        <p>Your index is available as one pod file at the following location on your machine:<br> <i>{{location}}</i>.</p>
-        <p>Now, share your pod! Send the file to your friends, send it to your Grandma on a USB drive... Just share! :)</p>
-        </div>
-    </div>
-    <div class="col-md-6 v-bottom">
-        <br><br>
-        <img src="/static/pears-slanted.png" width="200px"/>
+    <div class="card">
+	    <div class="card-header"><b>Pod: {{query}}</b></div>
+         <div class="card-body">
+         <a href={{url_for('orchard.download_file', filename=location)}} target='_blank' class="btn btn-success" role="button">Download</a><hr>
+	 {% for url in urls %}
+	 <a href='{{url[0]}}'>{{url[0]}}</a>
+	 {% if url[1] != '' %}
+	  | <span class="results-emoji">🔥</span>{{url[1]}}
+	 {% endif %}
+	 {% if url[2] != '' %}
+	  | <span class="results-emoji">🖊️</span>{{url[2]}}
+	 {% endif %}
+	 <br>
+	 {% endfor %}
+         </div>
+       </div>
     </div>
   </div> <!-- /row -->
 </div> <!-- /container full -->
