Changed url indexing logic

--- a/app/templates/indexer/index.html
+++ b/app/templates/indexer/index.html
@@ -46,7 +46,12 @@ SPDX-License-Identifier: AGPL-3.0-only
         </div>
         <div class="card-footer clearfix">
           <span class="input-group-btn float-end">
-            <input id="submit_button" type="submit" class="btn btn-success" value="Index URL">
+		  <!-- <input id="submit_button" type="submit" class="btn btn-success" value="Index URL"> -->
+            <button class="btn btn-lg btn-success" type="submit" id='searchbutton'>Index URL</button>
+            <button class="btn btn-lg btn-success" type="button" id='loadingbutton' style='display:none'>
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            Indexing...
+            </button>
           </span>
         </div>
         </form>
@@ -124,4 +129,6 @@ SPDX-License-Identifier: AGPL-3.0-only
 </div>
 
 </div><!-- /.container -->
+<script src="{{ url_for('static', filename='js/loading.js')}}"></script>
+
 {% endblock %}
