Updated indexer template

--- a/app/templates/indexer/index.html
+++ b/app/templates/indexer/index.html
@@ -46,7 +46,6 @@ SPDX-License-Identifier: AGPL-3.0-only
         </div>
         <div class="card-footer clearfix">
           <span class="input-group-btn float-end">
-		  <!-- <input id="submit_button" type="submit" class="btn btn-success" value="Index URL"> -->
             <button class="btn btn-lg btn-success" type="submit" id='searchbutton'>Index URL</button>
             <button class="btn btn-lg btn-success" type="button" id='loadingbutton' style='display:none'>
             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
@@ -84,7 +83,11 @@ SPDX-License-Identifier: AGPL-3.0-only
         </div>
         <div class="card-footer clearfix">
           <span class="input-group-btn float-end">
-            <input id="submit_button" type="submit" class="btn btn-success" value="Index file">
+            <button class="btn btn-lg btn-success" type="submit" id='searchbutton'>Index File</button>
+            <button class="btn btn-lg btn-success" type="button" id='loadingbutton' style='display:none'>
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            Indexing...
+            </button>
           </span>
         </div>
         </form>
@@ -118,7 +121,11 @@ SPDX-License-Identifier: AGPL-3.0-only
         </div>
         <div class="card-footer clearfix">
           <span class="input-group-btn float-end">
-            <input id="submit_button" type="submit" class="btn btn-success" value="Index bookmarks">
+            <button class="btn btn-lg btn-success" type="submit" id='searchbutton'>Index Bookmarks</button>
+            <button class="btn btn-lg btn-success" type="button" id='loadingbutton' style='display:none'>
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            Indexing...
+            </button>
           </span>
         </div>
         </form>
