Fixing loading buttons

--- a/app/templates/indexer/index.html
+++ b/app/templates/indexer/index.html
@@ -83,8 +83,8 @@ SPDX-License-Identifier: AGPL-3.0-only
         </div>
         <div class="card-footer clearfix">
           <span class="input-group-btn float-end">
-            <button class="btn btn-lg btn-success" type="submit" id='searchbutton'>Index File</button>
-            <button class="btn btn-lg btn-success" type="button" id='loadingbutton' style='display:none'>
+            <button class="btn btn-lg btn-success" type="submit" id='indexfilebutton'>Index File</button>
+            <button class="btn btn-lg btn-success" type="button" id='loadingfilebutton' style='display:none'>
             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
             Indexing...
             </button>
@@ -121,8 +121,8 @@ SPDX-License-Identifier: AGPL-3.0-only
         </div>
         <div class="card-footer clearfix">
           <span class="input-group-btn float-end">
-            <button class="btn btn-lg btn-success" type="submit" id='searchbutton'>Index Bookmarks</button>
-            <button class="btn btn-lg btn-success" type="button" id='loadingbutton' style='display:none'>
+            <button class="btn btn-lg btn-success" type="submit" id='indexbookmarksbutton'>Index Bookmarks</button>
+            <button class="btn btn-lg btn-success" type="button" id='loadingbookmarksbutton' style='display:none'>
             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
             Indexing...
             </button>
