--- a/app/templates/orchard/index.html
+++ b/app/templates/orchard/index.html
@@ -15,7 +15,7 @@ SPDX-License-Identifier: AGPL-3.0-only
 	    <div class="card-header"><b>Pod: {{p[0]}}</b></div>
             <div class="card-body">
 	    <p class="card-text">{{p[1]}} entries.</p>
-	    <a href="{{url_for('orchard.get_a_pod')}}?pod={{p[0]}}" class="btn btn-success">Share</a>
+	    <a href="{{url_for('orchard.get_a_pod')}}?pod={{p[0]}}" class="btn btn-success">View</a>
       </div>
       </div>
       {% endfor %}
