--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -11,13 +11,7 @@ SPDX-License-Identifier: AGPL-3.0-only
     <div class="card">
       <div class="card-header text-center"><h1>Database admin page</h1></div>
       <div class="card-body">
-        <p>This page allows you to manually administer your pods and indexed URLs. If you ever need to e.g. delete a single
-          URL
-          from your indexed pages, or modify a keyword, this is the place to do so. You can also view and search the entire
-          list
-          of available pods, as registered by your pear. (You may want to run 'Update known pods' from your pod management
-          page'
-          to get latest information.)</p>
+        <p>This page allows you to manually administer your users, pods and indexed URLs. If you ever need to e.g. delete a single URL from your indexed pages, or modify a keyword, this is the place to do so. You can also view and search the entire list of available pods, as registered by your pear.</p>
         <div class="row">
           <div class="col-sm-3 p-3">
             <a href="{{url_for('urls.index_view')}}" class="btn btn-success">See/modify your URL list</a>
