Added Flask WTF forms for validation support

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,50 +1,39 @@
 {% extends "base/base.html" %}
+{% from "base/_formhelpers.html" import render_field %}
+{% from "base/_formhelpers.html" import render_password_field %}
 
 {% block body %}
+
 <div class="container">
-  <div class="row p-3">
-    <div class="card-group">
-  
+
+  <div class="row">
+  <div class="col-sm-6">
     <div class="card">
       <div class="card-header text-center"><b>Login</b></div>
       <div class="card-body">
 	{% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="notification is-danger">
-            {{ messages[0] }}
+            {{ messages[0] }}</a>
             </div>
         {% endif %}
         {% endwith %}
       <form method="POST" action="/auth/login" enctype="multipart/form-data">
-            <div class="input-group p-2">
-              <span class="input-group-text">Email   </span>
-              <input class="form-control input-s" type="email" name="email" placeholder="Your Email" autofocus="">
-            </div>
-            <div class="input-group p-2">
-              <span class="input-group-text">Password</span>
-              <input class="form-control input-s" type="password" name="password" placeholder="Your Password">
-            </div>
-	    <a href={{url_for('auth.password_forgotten')}}>Password forgotten?</a>
-      </div>
+        {{ form.hidden_tag() }}
+        <p>{{ render_field(form.email) }}</p>
+        <p>{{ render_password_field(form.password) }}</p>
+      </div><!-- card body -->
       <div class="card-footer clearfix">
         <span class="input-group-btn">
-        <input id="submit_button" type="submit" class="btn btn-success" value="Login">
-      </div>
-      </form>
+	<input id="submit_button" type="submit" class="btn btn-success" value="Log in">
+      </div><!-- card footer -->
+    </form>
     </div>
+    <br><p>No account yet? <a href={{url_for('auth.signup')}}>Sign up</a></p>
+ </div>
+ </div>
+ </div>
 
-    <div class="card">
-      <div class="card-header text-center"><b>No account yet?</b></div>
-        <div class="card-body">
-	  You can freely search this PeARS installation without signing up. However, having an account allows you to contribute new content to the search engine and grow the information that people can find here. So join the community and contribute by signing up!
-        </div>
-        <div class="card-footer clearfix">
-          <span class="input-group-btn">
-          <a href={{url_for('auth.signup')}} class="btn btn-success" role="button">Signup</a>
-        </div>
-      </div>
-    </div>
 
-  </div>
-</div>
 {% endblock %}
+
