--- a/app/templates/auth/password_change.html
+++ b/app/templates/auth/password_change.html
@@ -1,35 +1,38 @@
 {% extends "base/base.html" %}
+{% from "base/_formhelpers.html" import render_field %}
 
 {% block body %}
+
 <div class="container">
-  <div class="row p-3">
-    <div class="card-group">
-  
+
+  <div class="row">
+  <div class="col-sm-6">
     <div class="card">
-	    <div class="card-header text-center"><b>{{username}}, reset your password</b></div>
+      <div class="card-header text-center"><b>Enter a new password</b></div>
       <div class="card-body">
 	{% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="notification is-danger">
-            {{ messages[0] }}  Go to <a href="{{ url_for('auth.login') }}">login page</a>.
+            {{ messages[0] }}
             </div>
         {% endif %}
         {% endwith %}
       <form method="POST" action="/auth/password-change" enctype="multipart/form-data">
-            <div class="input-group p-2">
-              <span class="input-group-text">New password</span>
-              <input class="form-control input-s" type="password" name="password" placeholder="Choose a new password">
-            </div>
-      </div>
+        {{ form.hidden_tag() }}
+        <p>{{ render_field(form.password) }}</p>
+        <p>{{ render_field(form.confirm) }}</p>
+      </div><!-- card body -->
       <div class="card-footer clearfix">
         <span class="input-group-btn">
-        <input id="submit_button" type="submit" class="btn btn-success" value="Reset password">
-      </div>
-      </form>
+	<input id="submit_button" type="submit" class="btn btn-success" value="Change password">
+      </div><!-- card footer -->
+    </form>
     </div>
+    <br><p>Return to the  <a href={{url_for('auth.login')}}>login page</a>.</p>
+ </div>
+ </div>
+ </div>
 
-  </div>
-  </div>
-</div>
+
 {% endblock %}
 
