--- a/app/templates/auth/password_forgotten.html
+++ b/app/templates/auth/password_forgotten.html
@@ -1,46 +1,37 @@
 {% extends "base/base.html" %}
+{% from "base/_formhelpers.html" import render_field %}
+{% from "base/_formhelpers.html" import render_password_field %}
 
 {% block body %}
+
 <div class="container">
-  <div class="row p-3">
-    <div class="card-group">
-  
+
+  <div class="row">
+  <div class="col-sm-6">
     <div class="card">
       <div class="card-header text-center"><b>Forgotten your password? No problem!</b></div>
       <div class="card-body">
 	{% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="notification is-danger">
-            {{ messages[0] }}  Go to <a href="{{ url_for('auth.login') }}">login page</a>.
+            {{ messages[0] }}</a>
             </div>
         {% endif %}
         {% endwith %}
-      <form method="POST" action="/auth/password-reset" enctype="multipart/form-data">
-            <div class="input-group p-2">
-              <span class="input-group-text">Email   </span>
-              <input class="form-control input-s" type="email" name="email" placeholder="Your email" autofocus="">
-            </div>
-</div>
+      <form method="POST" action="/auth/password-forgotten" enctype="multipart/form-data">
+        {{ form.hidden_tag() }}
+        <p>{{ render_field(form.email) }}</p>
+      </div><!-- card body -->
       <div class="card-footer clearfix">
         <span class="input-group-btn">
-        <input id="submit_button" type="submit" class="btn btn-success" value="Send link">
-      </div>
-      </form>
+	<input id="submit_button" type="submit" class="btn btn-success" value="Send link">
+      </div><!-- card footer -->
+    </form>
     </div>
+ </div>
+ </div>
+ </div>
 
-    <div class="card">
-      <div class="card-header text-center"><b>Already have an account?</b></div>
-        <div class="card-body">
-	  Nice to see you back here!
-        </div>
-        <div class="card-footer clearfix">
-          <span class="input-group-btn">
-          <a href={{url_for('auth.login')}} class="btn btn-success" role="button">Log in</a>
-        </div>
-      </div>
-    </div>
 
-  </div>
-</div>
 {% endblock %}
 
