--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -1,10 +1,12 @@
 {% extends "base/base.html" %}
+{% from "base/_formhelpers.html" import render_field %}
 
 {% block body %}
+
 <div class="container">
-  <div class="row p-3">
-    <div class="card-group">
-  
+
+  <div class="row">
+  <div class="col-sm-6">
     <div class="card">
       <div class="card-header text-center"><b>Signup</b></div>
       <div class="card-body">
@@ -16,44 +18,27 @@
         {% endif %}
         {% endwith %}
       <form method="POST" action="/auth/signup" enctype="multipart/form-data">
-            <div class="input-group p-2">
-              <span class="input-group-text">Email   </span>
-              <input class="form-control input-s" type="email" name="email" placeholder="Your email" autofocus="">
-            </div>
-            <div class="input-group p-2">
-              <span class="input-group-text">Username   </span>
-              <input class="form-control input-s" type="text" name="username" placeholder="Username" autofocus="">
-            </div>
-            <div class="input-group p-2">
-              <span class="input-group-text">Password</span>
-              <input class="form-control input-s" type="password" name="password" placeholder="Choose a password">
-            </div>
-	    <br>
-	    <div class="form-check">
-	    <input class="form-check-input" type="checkbox" value="" id="legal" name="legal" required>
-	    <label class="form-check-label" for="legal">I agree to the <a href="{{url_for('pages.return_privacy')}}">privacy policy</a> and <a href="{{url_for('pages.return_privacy')}}">terms of service</a> of this site.</label>
-</div>
-      </div>
+        {{ form.hidden_tag() }}
+        <p>{{ render_field(form.email) }}</p>
+        <p>{{ render_field(form.username) }}</p>
+        <p>{{ render_field(form.password) }}</p>
+        <p>{{ render_field(form.confirm) }}</p>
+	<div class="form-check">
+	  {{ form.accept_tos(class_="form-check-input") }}
+	  <label class="form-check-label" for="legal">I agree to the <a href="{{url_for('pages.return_privacy')}}">privacy policy</a> and <a href="{{url_for('pages.return_privacy')}}">terms of service</a> of this site.</label>
+        </div>
+      </div><!-- card body -->
       <div class="card-footer clearfix">
         <span class="input-group-btn">
-        <input id="submit_button" type="submit" class="btn btn-success" value="Sign up">
-      </div>
-      </form>
+	<input id="submit_button" type="submit" class="btn btn-success" value="Sign up">
+      </div><!-- card footer -->
+    </form>
     </div>
+    <br><p>Do you already have an account?  <a href={{url_for('auth.login')}}>Log in</a></p>
+ </div>
+ </div>
+ </div>
 
-    <div class="card">
-      <div class="card-header text-center"><b>Already have an account?</b></div>
-        <div class="card-body">
-	  Nice to see you back here!
-        </div>
-        <div class="card-footer clearfix">
-          <span class="input-group-btn">
-          <a href={{url_for('auth.login')}} class="btn btn-success" role="button">Log in</a>
-        </div>
-      </div>
-    </div>
 
-  </div>
-</div>
 {% endblock %}
 
