--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -76,14 +76,10 @@ SPDX-License-Identifier: AGPL-3.0-only
                 <li class="nav-item"><a class="nav-link" href="{{url_for('admin.index')}}">DB admin</a></li>          
 		{% endif %}
             </ul>
-            <ul class="nav navbar-nav navbar-right">
-		{% if not current_user.is_authenticated %}
-                <li class="nav-item"><a class="nav-link" href="{{url_for('auth.login')}}">Login</a></li>
+            <ul class="nav nav-pills navbar-nav navbar-right">
+		{% if current_user.is_authenticated and current_user.is_confirmed %}
+                <li class="nav-item"><a class="nav-link" href="{{url_for('settings.index')}}">Profile</a></li>
 		{% endif %}
-		{% if current_user.is_authenticated %}
-                <li class="nav-item"><a class="nav-link" href="{{url_for('auth.logout')}}">Logout</a></li>
-		{% endif %}
-                <li class="nav-item"><a class="nav-link" href="{{url_for('settings.index')}}">Settings</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{url_for('pages.return_faq')}}">F.A.Q.</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{url_for('pages.return_acknowledgements')}}">Acknowledgments</a>
                 </li>
@@ -115,6 +111,12 @@ SPDX-License-Identifier: AGPL-3.0-only
                         <small class="d-lg-none">Twitter</small>
                     </a>
                 </li>                
+		{% if not current_user.is_authenticated %}
+                <li class="nav-item"><a class="nav-link active" href="{{url_for('auth.login')}}">Login</a></li>
+		{% endif %}
+		{% if current_user.is_authenticated %}
+                <li class="nav-item"><a class="nav-link" href="{{url_for('auth.logout')}}">Logout</a></li>
+		{% endif %}
             </ul>
             {% endblock %}
         </div>
